--- a/build.gradle
+++ b/build.gradle
@@ -15,19 +15,19 @@ buildscript {
 
         maven { url = "https://dl.bintray.com/kotlin/kotlin-eap" }
         maven { url = "https://jitpack.io" }
+        maven {url 'https://developer.huawei.com/repo/'}
 
-
-//        maven("https://jitpack.io")
-//        maven("http://dl.bintray.com/kotlin/kotlin-eap")
-//        maven("https://maven.aliyun.com/repository/google")
-//        maven("https://maven.aliyun.com/repository/public")
+        maven{url ="https://maven.aliyun.com/repository/google"}
+        maven{url ="https://maven.aliyun.com/repository/public"}
     }
 
     dependencies {
 //        classpath('com.android.tools.build:gradle:4.2.0-alpha07')
-        classpath('com.android.tools.build:gradle:4.2.0-alpha12')
+        classpath('com.android.tools.build:gradle:4.2.0-alpha13')
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
+
+        classpath 'com.huawei.agconnect:agcp:1.3.1.300'
 //        classpath ("com.didichuxing.doraemonkit:doraemonkit-plugin:3.1.8")
 //        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 //        classpath "org.koin:koin-gradle-plugin:$koin_version"
@@ -43,10 +43,10 @@ allprojects {
         mavenCentral()
         maven { url = "https://dl.bintray.com/kotlin/kotlin-eap" }
         maven { url "https://jitpack.io" }
-//        maven("https://jitpack.io")
-//        maven("http://dl.bintray.com/kotlin/kotlin-eap")
-//        maven("https://maven.aliyun.com/repository/google")
-//        maven("https://maven.aliyun.com/repository/public")
+        maven {url 'https://developer.huawei.com/repo/'}
+
+        maven{url ="https://maven.aliyun.com/repository/google"}
+        maven{url ="https://maven.aliyun.com/repository/public"}
 
 
     }
